add admonition rewriting

--- a/test/example/e004/expected.html
+++ b/test/example/e004/expected.html
@@ -1,4 +1,5 @@
-..................................
-..................................
-..................................
-..................................
+<div class='warning'><h3 class='title'>Warning</h3>
+<p>
+Red sky at morning
+</p>
+</div>
