--- a/test/example/e004/expected.html
+++ b/test/example/e004/expected.html
@@ -1,4 +1,4 @@
-<div class='warning'><h3 class='title'>Warning</h3>
+<div class='admonition warning'><h3 class='title'>Warning</h3>
 <p>
 Red sky at morning
 </p>
