--- a/test/example/e007/expected.html
+++ b/test/example/e007/expected.html
@@ -1,1 +1,2 @@
-<p><a href="url#first_section">first section</a></p>
+<p><a href="url#first_section">first section</a>
+<a href="url#second_section">Second section</a></p>
